Refactoring. Add local_laplacian filter

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,21 @@
 [build-system]
-requires = ["hatchling", "torch"]
+requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "cuda_demosaic"
+name = "torch_darktable"
 version = "0.1.0"
-description = "CUDA Demosaic algorithms extracted from darktable for PyTorch"
+description = "CUDA ISP algorithms extracted from darktable for PyTorch"
 authors = [{name = "Oliver Batchelor"}]
 requires-python = ">=3.10"
 dependencies = [
     "torch>=2.7.0",
     "numpy>=2.2.0",
+    "pillow",
 ]
+
+[project.scripts]
+test-debayer = "torch_darktable.scripts.test_debayer:main"
+test-laplacian = "torch_darktable.scripts.test_laplacian:main"
+
+
