--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ test-laplacian = "torch_darktable.scripts.test_laplacian:main"
 test-bilateral = "torch_darktable.scripts.test_bilateral:main"
 test-wiener = "torch_darktable.scripts.test_wiener:main"
 test-denoise = "torch_darktable.scripts.test_wiener:main"
+test-jpeg = "torch_darktable.scripts.test_jpeg:main"
 run-benchmark = "torch_darktable.scripts.run_benchmark:main"
 process-raw = "torch_darktable.scripts.process_raw.main:main"
 
