Convert build to conda

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ["setuptools>=68", "wheel"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [project]
 name = "torch_darktable"
@@ -9,10 +9,12 @@ description = "CUDA ISP algorithms extracted from darktable for PyTorch"
 authors = [{name = "Oliver Batchelor"}]
 requires-python = ">=3.10"
 dependencies = [
-    "torch>=2.4.0",
+    "torch>=2.7.0",
     "numpy",
     "pillow",
-    "beartype"
+    "beartype",
+    "opencv-python",
+    "matplotlib"
 ]
 
 [project.scripts]
@@ -25,6 +27,4 @@ test-jpeg = "torch_darktable.scripts.test_jpeg:main"
 run-benchmark = "torch_darktable.scripts.run_benchmark:main"
 view-raw = "torch_darktable.scripts.view_raw.main:main"
 
-[tool.setuptools.packages.find]
-include = ["torch_darktable*"]
 
